--- a/Execírcios/ex022/fundo001.html
+++ b/Execírcios/ex022/fundo001.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste de Imagem de Fundo</title>
     <style>
+        body{
+            background-image: url(img/wallpaper001.jpg);
+        }
         div.quadrado{
             display: inline-block; 
             border: 2px solid black;
@@ -19,10 +22,10 @@
 
         }
         div#q2{
-            background-image: linear-gradient(to bottom, yellow,red);
+            background-image: linear-gradient(to bottom, rgba(255, 0, 200, 0.688),rgb(255, 0, 132));
         }
         div#q3{
-            background-image: url("img/");
+            background-image: url("img/pattern003.png");
         }
     </style>
 </head>
