--- a/Execírcios/ex024/paginas-extras/pag001.html
+++ b/Execírcios/ex024/paginas-extras/pag001.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabelas Responsivas</title>
+    <title>Site de Teste</title>
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
+            background-color:lightgray;
             
         }
         table{
@@ -31,9 +32,6 @@
     </style>
 </head>
 <body>
-    <h1>Tabelas em telas pequenas</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi maiores deleniti fugiat amet tenetur aperiam corrupti consequuntur expedita laudantium tempore. Minus odio vero eaque et ex, ratione neque ipsum repellat.</p>
-
     <div id="container">
         <table>
             <caption>Tabelas Responsivas</caption>
