--- a/Execírcios/ex024/iframe003.html
+++ b/Execírcios/ex024/iframe003.html
@@ -26,7 +26,7 @@
         <li><a href="paginas-extras/pag002.html" target="frame">Segunda página</a></li>
         <li><a href="paginas-extras/pag003.html" target="frame">Terceira página</a></li>
     </ul>
-    <iframe id="tela" name="frame" src="" frameborder="1" >
+    <iframe id="tela" name="frame"  srcdoc="<h1>Escolha uma das opções acima</h1> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi in voluptatibus debitis nam, deleniti ea, illum tempora accusantium autem corrupti incidunt temporibus doloribus ab quidem nostrum laboriosam adipisci repellendus alias!</p> <img  src='imagem/figura.png'> " >
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
 
