--- a/Execírcios/ex024/iframe004.html
+++ b/Execírcios/ex024/iframe004.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Meu site principal</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est provident iste atque mollitia facilis doloremque alias obcaecati numquam, neque cupiditate, sapiente explicabo ea, suscipit commodi inventore magnam natus blanditiis laborum?</p>
-    <iframe src="paginas-extras/pag004.html"  >
+    <iframe src="paginas-extras/pag004.html" sandbox="allow-same-origin allow-forms allow-scripts" referrerpolicy="no-referrer" >
         Seu navegador não é compatível com este navegador
     </iframe>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi nulla pariatur sed laboriosam et perspiciatis. Perspiciatis repellat nam similique debitis voluptatum ipsam adipisci cum! Voluptatibus maxime provident possimus suscipit sapiente.</p>
